# GTKCrypto

./: .gitignore  CHANGELOG.md  CMakeLists.txt  COPYING  ChangeLog  LICENSE  Makefile  README.md  SECURITY.md  TODO  compile.sh  meson.build  meson_options.txt  polcrypt-cli  polcrypt.desktop
.circleci/: config.yml
.github/workflows/: ci.yml  codeql-analysis.yml
cmake/: FindGpgme.cmake
css/: entry.css  hash-err.css  hash-ok.css
data/: com.github.paolostivanin.GTKCrypto.appdata.xml  com.github.paolostivanin.GTKCrypto.desktop  com.github.paolostivanin.gtkcrypto.desktop  com.github.paolostivanin.gtkcrypto.metainfo.xml  gtkcrypto-cli.1  meson.build
docs/: file-format.md  release-checklist.md
po/: it-cli.po  it.po  msg-cli.pot  msg-gui.pot  msg.pot  msg_cli.pot
po/it/: it-cli.mo  it-gui.mo
src/: add-boxes-grid.c  aes256cbc.c  app-about.c  app-activate.c  app-quit.c  app-startup.c  app.c  callbacks.h  check-file-extension.c  check_b64.c  check_pkcs7.c  check_pwd.c  choose-file.c  cleanup.c  cleanup.h  common-callbacks.c  common-callbacks.h  common-widgets.c  common-widgets.h  compare-file-hash-cb.c  compute-hash-cb.c  create-logo.c  create-mainwin.c  create_logo.c  create_popover.c  crypt-common.c  crypt-common.h  crypt.h  crypt_file.c  crypt_file.h  css.c  decrypt-file-cb.c  decrypt-file-cb.h  decrypt-file.c  decrypt-files-cb.c  decrypt-files-cb.h  decrypt.c  decrypt_file.c  delete_input_file.c  dialog-run.c  (+63 more)
src/OLD/: check_pkcs7.c  decrypt_file.c  delete_input_file.c  encrypt_file.c  main.c  main.css
src/cli/: check_pkcs7.c  cli-main.c  decrypt_file.c  delete_input_file.c  encrypt_file.c  hmac.c  main.c  polcrypt.h  random_write.c
src/cli/hashes/: gostr3411_94.c  md5.c  rmd160.c  sha1.c  sha256.c  sha512.c  stribog512.c  whirlpool.c
src/gtk3/: Makefile  asd  decrypt_file_gui.c  delete_input_file.c  encrypt_file_gui.c  hmac-gui.c  main-gui.c  polcrypt-gui.c  polcrypt.h  random_write.c  zero_write.c
src/gtk3/hashes/: gostr3411_94.c  hash.c  md5.c  rmd160.c  sha1.c  sha256.c  sha3-256.c  sha3-512.c  sha512.c  stribog512.c  whirlpool.c
src/hash/: gost94.c  hash-common.c  hash-utils.c  hash.h  hmac.c  md5.c  sha1.c  sha2.c  sha3.c  whirlpool.c
src/hash-algo/: md5.c  rmd160.c  sha1.c  sha224.c  sha256.c  sha384.c  sha512.c  tiger.c  tiger2.c  whirlpool.c
src/hashes/: gost94.c  sha1.c  sha256.c  sha512.c  whirlpool.c
src/pages/: file-crypto-page.c  file-crypto-page.h  gpg-page.c  gpg-page.h  hashing-page.c  hashing-page.h  text-crypto-page.c  text-crypto-page.h
src/ui/: gtkcrypto.ui  main.ui  widgets.ui
tests/: fuzz-v3-text.c  meson.build  test-cli.sh  test-core.c  test-gpg.c
