install_data(
  'com.github.paolostivanin.GTKCrypto.desktop',
  install_dir: get_option('datadir') / 'applications',
)

install_data(
  'com.github.paolostivanin.GTKCrypto.appdata.xml',
  install_dir: get_option('datadir') / 'metainfo',
)

install_data(
  'icons' / 'com.github.paolostivanin.GTKCrypto.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
)
