install_data(
  'com.github.paolostivanin.gtkcrypto.desktop',
  install_dir: get_option('datadir') / 'applications',
)

install_data(
  'com.github.paolostivanin.gtkcrypto.metainfo.xml',
  install_dir: get_option('datadir') / 'metainfo',
)

install_data(
  'icons' / 'com.github.paolostivanin.gtkcrypto.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
)

install_man('gtkcrypto-cli.1')
